TMDb API working + basic UI to display search res

--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,6 +1,6 @@
 {
-	"appId": "io.ionic.starter",
-	"appName": "FlickMate1.0",
-	"webDir": "www",
-	"bundledWebRuntime": false
+  "appId": "io.flick.mate",
+  "appName": "FlickMate1.0",
+  "webDir": "www",
+  "bundledWebRuntime": false
 }
