--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@capacitor/status-bar": "1.0.1",
     "@ionic/angular": "^5.5.2",
     "@ionic/lab": "^3.2.10",
-    "rxjs": "~6.6.0",
+    "rxjs": "^6.6.7",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
   },
