--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@capacitor/ios": "3.0.2",
     "@capacitor/keyboard": "1.0.1",
     "@capacitor/status-bar": "1.0.1",
+    "@codetrix-studio/capacitor-google-auth": "^3.0.2",
     "@ionic/angular": "^5.5.2",
     "@ionic/lab": "^3.2.10",
     "firebase": "^8.7.1",
