--- a/package.json
+++ b/package.json
@@ -28,8 +28,11 @@
     "@capacitor/keyboard": "1.0.1",
     "@capacitor/status-bar": "1.0.1",
     "@codetrix-studio/capacitor-google-auth": "^3.0.2",
+    "@ionic-native/core": "^5.34.0",
+    "@ionic-native/native-storage": "^5.34.0",
     "@ionic/angular": "^5.5.2",
     "@ionic/lab": "^3.2.10",
+    "cordova-plugin-nativestorage": "^2.3.2",
     "firebase": "^8.7.1",
     "rxjs": "^6.6.7",
     "tslib": "^2.0.0",
