--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ src/config.ts
 src/environments/environment.ts
 ios/App/App/GoogleService-Info.plist
 ios/App/App/Info.plist
+src/assets/title.ratings.tsv
