--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "@ionic/lab": "^3.2.10",
     "cordova-plugin-nativestorage": "^2.3.2",
     "firebase": "^8.7.1",
+    "ngx-papaparse": "^5.0.0",
+    "papaparse": "^5.3.1",
     "rxjs": "^6.6.7",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
