--- a/package.json
+++ b/package.json
@@ -33,12 +33,12 @@
     "@ionic/angular": "^5.5.2",
     "@ionic/lab": "^3.2.10",
     "cordova-plugin-nativestorage": "^2.3.2",
-    "firebase": "^8.7.1",
     "ngx-papaparse": "^5.0.0",
     "papaparse": "^5.3.1",
     "rxjs": "^6.6.7",
     "tslib": "^2.0.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "firebase": "^7.0 || ^8.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.0.1",
@@ -71,7 +71,14 @@
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
-    "typescript": "~4.2.4"
+    "typescript": "~4.2.4",
+    "@angular-devkit/architect": ">= 0.900 < 0.1300",
+    "firebase-tools": "^8.0.0 || ^9.0.0",
+    "fuzzy": "^0.1.3",
+    "inquirer": "^6.2.2",
+    "inquirer-autocomplete-prompt": "^1.0.1",
+    "open": "^7.0.3",
+    "jsonc-parser": "^3.0.0"
   },
   "description": "An Ionic project"
 }
