--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/core": "~12.0.1",
     "@angular/fire": "^6.1.5",
     "@angular/forms": "~12.0.1",
+    "@angular/localize": "~12.0.1",
     "@angular/platform-browser": "~12.0.1",
     "@angular/platform-browser-dynamic": "~12.0.1",
     "@angular/router": "~12.0.1",
@@ -33,6 +34,8 @@
     "@ionic/angular": "^5.5.2",
     "@ionic/lab": "^3.2.10",
     "@ionic/storage": "^3.0.6",
+    "@ng-bootstrap/ng-bootstrap": "^10.0.0",
+    "bootstrap": "^4.5.3",
     "cordova-plugin-nativestorage": "^2.3.2",
     "firebase": "^7.0 || ^8.0",
     "ngx-papaparse": "^5.0.0",
