BUG FIx: close modal when submitting rate back, imdb rating fixed

--- a/package.json
+++ b/package.json
@@ -31,12 +31,14 @@
     "@codetrix-studio/capacitor-google-auth": "^3.0.2",
     "@ionic-native/core": "^5.34.0",
     "@ionic-native/native-storage": "^5.34.0",
+    "@ionic-native/youtube-video-player": "^5.36.0",
     "@ionic/angular": "^5.5.2",
     "@ionic/lab": "^3.2.10",
     "@ionic/storage": "^3.0.6",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "bootstrap": "^4.5.3",
     "cordova-plugin-nativestorage": "^2.3.2",
+    "cordova-plugin-youtube-video-player": "^2.4.0",
     "firebase": "^7.0 || ^8.0",
     "ngx-papaparse": "^5.0.0",
     "papaparse": "^5.3.1",
