--- a/ios/App/Podfile
+++ b/ios/App/Podfile
@@ -15,6 +15,8 @@ def capacitor_pods
   pod 'CapacitorKeyboard', :path => '../../node_modules/@capacitor/keyboard'
   pod 'CapacitorStatusBar', :path => '../../node_modules/@capacitor/status-bar'
   pod 'CodetrixStudioCapacitorGoogleAuth', :path => '../../node_modules/@codetrix-studio/capacitor-google-auth'
+  pod 'CapacitorVideoPlayer', :path => '../../node_modules/capacitor-video-player'
+  pod 'CapacitorYoutubePlayer', :path => '../../node_modules/capacitor-youtube-player'
   pod 'CordovaPlugins', :path => '../capacitor-cordova-ios-plugins'
   pod 'CordovaPluginsStatic', :path => '../capacitor-cordova-ios-plugins'
 end
