--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@capacitor/status-bar": "1.0.1",
     "@codetrix-studio/capacitor-google-auth": "^3.0.2",
     "@ionic-native/core": "^5.34.0",
+    "@ionic-native/keyboard": "^5.36.0",
     "@ionic-native/native-storage": "^5.34.0",
     "@ionic-native/youtube-video-player": "^5.36.0",
     "@ionic/angular": "^5.5.2",
@@ -37,6 +38,8 @@
     "@ionic/storage": "^3.0.6",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "bootstrap": "^4.5.3",
+    "capacitor-video-player": "^3.3.1-2",
+    "capacitor-youtube-player": "^1.0.4",
     "cordova-plugin-nativestorage": "^2.3.2",
     "cordova-plugin-youtube-video-player": "^2.4.0",
     "firebase": "^7.0 || ^8.0",
