--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@ src/environments/environment.ts
 ios/App/App/GoogleService-Info.plist
 src/assets/title.ratings.tsv
 ios/App/App/Info.plist
+ios/App/App/config.xml
