--- a/ios/App/App/capacitor.config.json
+++ b/ios/App/App/capacitor.config.json
@@ -2,8 +2,5 @@
 	"appId": "io.flick.mate",
 	"appName": "FlickMate",
 	"webDir": "www",
-	"bundledWebRuntime": false,
-	"server": {
-		"url": "http://192.168.8.104:8100"
-	}
+	"bundledWebRuntime": false
 }
